--- a/shah/app.css
+++ b/shah/app.css
@@ -5011,6 +5011,7 @@
   top: 0;
   bottom: 0;
   right: 12px;
+  pointer-events: none;
   -ms-transform: rotateZ(90deg);
   -moz-transform: rotateZ(90deg);
   -webkit-transform: rotateZ(90deg);
@@ -8162,6 +8163,12 @@
   text-align: center;
 }
 
+.growth-campaigns .swag img {
+  width: 100%;
+  max-width: 350px;
+  margin-top: 10px;
+}
+
 .growth-campaigns .campaign-list .select-bar {
   background-color: var(--clear-blue);
   height: 4px;
@@ -8289,6 +8296,13 @@
 
 .growth-campaigns.mobile .past-campaigns .past-campaign {
   margin-top: 3.5rem;
+}
+
+@media (min-width: 768px) {
+  .growth-campaigns .swag img {
+    max-width: 450px;
+    margin-top: 20px;
+  }
 }
 
 .growth-purchases.mobile .purchases-subtitle {
@@ -8776,6 +8790,30 @@
   color: #fff;
 }
 
+.growth-welcome .row {
+  margin: 0px;
+}
+
+.growth-welcome .left-strip {
+  max-width: 450px;
+}
+
+.growth-welcome .header {
+  background-color: white;
+  height: 80px;
+  width: 100%;
+}
+
+.growth-welcome .wide-container {
+  width: 100%;
+}
+
+.growth-welcome .container-half {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
 .growth-welcome .container {
   width: 100%;
   padding-right: 15px;
@@ -8817,14 +8855,15 @@
 
 .growth-welcome .signup-button {
   font-size: 1.125rem;
+  font-weight: bold;
   width: 100%;
   border-radius: 26px;
-  border: solid 1px var(--white);
+  border: 0px;
   padding: 12px 0;
-  margin: 0 auto;
+  margin: 40px auto 0px auto;
   max-width: 350px;
   color: white;
-  background-color: transparent;
+  background-color: #121d28;
   text-align: center;
 }
 
@@ -8833,7 +8872,7 @@
 }
 
 .growth-welcome .signup-button:hover {
-  background-color: #036ddd;
+  background-color: #222d38;
   cursor: pointer;
 }
 
@@ -8859,6 +8898,12 @@
   text-align: left;
 }
 
+.growth-welcome #tagline p {
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 500;
+}
+
 .growth-welcome #tagline.personalised {
   margin-top: 10px;
 }
@@ -8869,26 +8914,45 @@
 
 .growth-welcome #intro p {
   font-family: Lato, sans-serif;
-  font-size: 20px;
-  line-height: 1.3;
-  margin: 30px;
+  font-size: 18px;
+  line-height: 1.44;
+  margin: 25px 35px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.growth-welcome #callout .callout-title {
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #101d28;
+  margin-top: 15px;
 }
 
 .growth-welcome #callout p {
   font-family: "Poppins", sans-serif;
   text-align: center;
-  font-size: 27px;
+  font-size: 32px;
   font-weight: 1000;
+  font-weight: bold;
   text-transform: uppercase;
 }
 
 .growth-welcome #callout .value {
+  font-size: 88px;
+  font-weight: bold;
+  color: var(--white);
   display: block;
-  font-size: 72px;
 }
 
 .growth-welcome #download {
   text-align: center;
+}
+
+.growth-welcome #rewards p {
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .growth-welcome #rewards h2 {
@@ -8906,6 +8970,7 @@
 
 .growth-welcome #screenshot1 img {
   position: relative;
+  overflow: hidden;
   left: 15px;
 }
 
@@ -8948,7 +9013,7 @@
 .growth-welcome .avatar-container p {
   display: block;
   margin: 0 auto;
-  padding-top: 15px;
+  padding-top: 30px;
   font-family: "Lato" sans-serif;
   font-size: 20px;
   line-height: 1.3;
@@ -8956,6 +9021,10 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .growth-welcome .container-half {
+    width: 50%;
+  }
+
   .growth-welcome #screenshot1 {
     margin-top: 100px;
   }
@@ -8969,7 +9038,7 @@
   }
 
   .growth-welcome #tagline p {
-    font-size: 25px;
+    font-size: 18px;
   }
 
   .growth-welcome #callout {
@@ -9001,7 +9070,7 @@
   }
 
   .growth-welcome .avatar-container p {
-    padding-top: 30px;
+    padding-top: 100px;
   }
 
   .growth-welcome .qrcode-wrapper p {
